# celery-webinar_06112024

./: .gitignore  README.md
demos/01_broker/: README.md  docker-compose.yml  tasks.py
demos/02_broker_and_backend/: .gitignore  README.md  tasks.py
demos/03_multiple_tasks/: README.md
demos/03_multiple_tasks/proj/: celery.py  tasks.py
demos/04_multiple_queues/: README.md  app.py  start_workers.sh  stop_workers.sh
demos/04_multiple_queues/proj/: celery.py  tasks.py
demos/05_orchestrate_tasks/: README.md  app.py  docker-compose.yml  start_workers.sh  stop_workers.sh
demos/06_async_tasks/: README.md  app.py  start_workers.sh  stop_workers.sh
demos/06_async_tasks/proj/: celery.py
demos/07_containerized_workers/: README.md  docker-compose.yml
demos/07_containerized_workers/apps/task_manager/: .env  requirements.txt  setup.cfg  task_shared-0.1.0-py3-none-any.whl
demos/07_containerized_workers/apps/task_manager/task_manager/: __main__.py
demos/07_containerized_workers/apps/task_shared/: Makefile  README.md  requirements.txt  setup.cfg
demos/07_containerized_workers/apps/task_shared/task_shared/: celery_app.py  tasks.py
demos/07_containerized_workers/apps/task_worker/: Dockerfile  README.md  requirements.txt  setup.cfg  task_shared-0.1.0-py3-none-any.whl
demos/07_containerized_workers/apps/task_worker/task_worker/: worker.py
