[metadata]
name = task_manager
version = 0.1.0
author = Eric W. Greene
author_email = eric@cloudcontraptions.com
url = https://www.cloudcontraptions.com
description = Task manager that coordinates task workers.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find: